--- a/sitewife/test_app1/static/test_app1/CSS/styles.css
+++ b/sitewife/test_app1/static/test_app1/CSS/styles.css
@@ -31,7 +31,18 @@ body {
     padding: 0;
 }
 
-
+footer {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background-color: #333;
+  color: #fff;
+  text-align: center;
+  padding: 15px 0;
+  font-size: 14px;
+  z-index: 1000; /* чтобы футер был поверх других элементов */
+}
 
 .scroll-element {
     opacity: 0;
@@ -107,19 +118,54 @@ h2 {
     margin-bottom: 10px;
 }
 
-/* Стили для footer */
 
+.mainup {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    margin: 40px auto; /* Добавляем auto для центрирования */
+    max-width: 90%; /* Ограничиваем ширину */
+    padding: 20px; /* Добавляем отступы */
+    justify-content: center;
+}
 
-/* Для ссылок в footer */
-footer {
-   text-align: center;
-   position:fixed;
-   left:0px;
-   bottom:0px;
-   height:30px;
-   width:100%;
-   background: #333;
-   color: white;
+.mainup.reverse {
+    flex-direction: row-reverse;
+}
+
+.mainup .profile-photo {
+    opacity: 0;
+    transform: translateX(-100px);
+    transition: all 0.8s ease-out;
+}
+
+.mainup .description {
+    opacity: 0;
+    transform: translateX(100px);
+    transition: all 0.8s ease-out;
+}
+
+/* При появлении на экране — включаем */
+.mainup.show .profile-photo {
+    opacity: 1;
+    transform: translateX(0);
+}
+
+.mainup.show .description {
+    opacity: 1;
+    transform: translateX(0);
+}
+
+.about-me-container {
+    opacity: 0;
+    transform: translateY(50px);
+    transition: opacity 0.5s ease-out, transform 0.5s ease-out;
+    margin: 40px auto;
+    max-width: 90%;
+    padding: 20px;
+    background: white;
+    border-radius: 15px;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2)
 }
 
 .about-me {
@@ -137,6 +183,45 @@ footer {
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
     justify-content: center;
 }
+
+.about-me.show {
+    opacity: 1;
+    transform: translateY(0);
+}
+
+.about-me.reverse {
+    flex-direction: row-reverse;
+}
+
+.about-me-combined {
+    opacity: 0;
+    transform: translateY(50px);
+    transition: opacity 0.5s ease-out, transform 0.5s ease-out;
+    margin: 40px auto;
+    max-width: 90%;
+    padding: 20px;
+    background: white;
+    border-radius: 15px;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+}
+
+.about-me-combined.show {
+    opacity: 1;
+    transform: translateY(0);
+}
+
+/* Стили для секций внутри объединенного блока */
+.about-me-section {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    margin-bottom: 40px;
+}
+
+.about-me-section.reverse {
+    flex-direction: row-reverse;
+}
+
 
 .about-me-reviews {
     display: flex;
@@ -200,27 +285,15 @@ footer {
     display: flex;
 }
 
-.about-me.show {
-    opacity: 1;
-    transform: translateY(0);
-}
-
 .profile-photo {
     width: 400px; /* Сделаем чуть меньше */
     /*max-height: 500px;*/
     height: auto;
     border-radius: 15px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-/*    border: 5px solid #eee; /* Добавим мягкую рамку */
-}
+    order: 1;
 
-.profile-photo-left {
-    width: 400px; /* Сделаем чуть меньше */
-    /*max-height: 500px;*/
-    height: auto;
-    border-radius: 15px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    order: 2;
+/*    border: 5px solid #eee; /* Добавим мягкую рамку */
 }
 
 .description {
@@ -229,15 +302,17 @@ footer {
     line-height: 1.8;
     color: #555;
     text-align: justify; /* Выровняем текст */
+    order: 2;
 }
 
-.description-left {
-    flex: 1;
-    font-size: 1.5rem;
-    line-height: 1.8;
-    color: #555;
-    text-align: justify; /* Выровняем текст */
-    order: 1;
+.mainup.show .profile-photo {
+    opacity: 1;
+    transform: translateX(0);
+}
+
+.mainup.show .description {
+    opacity: 1;
+    transform: translateX(0);
 }
 
 .carousel {
@@ -273,9 +348,9 @@ footer {
 
 /* Стили для миниатюрных изображений */
 .review-item {
-    width: 150px;                   /* Ширина изображения */
-    height: 150px;                  /* Высота изображения */
-    object-fit: cover;              /* Изображения не искажаются */
+    width: 350px;                   /* Ширина изображения */
+    height: 350px;                  /* Высота изображения */
+    object-fit: contain;              /* Изображения не искажаются */
     border-radius: 10px;            /* Скругление углов */
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Легкая тень */
     transition: transform 0.3s ease; /* Плавный эффект при наведении */
@@ -284,8 +359,6 @@ footer {
 .review-item:hover {
     transform: scale(1.1);          /* Увеличиваем изображение при наведении */
 }
-
-
 
 .carousel-track {
     display: flex;
@@ -309,7 +382,6 @@ footer {
     object-fit: contain; /* Сохраняет пропорции изображения */
     border-radius: 10px; /* Скругление углов изображения */
 }
-
 
 .carousel-item.active {
     opacity: 1;
@@ -358,19 +430,31 @@ footer {
 
 /* Скрываем блок по умолчанию */
 .rights-content {
-    max-height: 0; /* Начальная высота = 0 */
-    overflow: hidden; /* Скрываем контент за границами блока */
+    padding-left: 20px;
+    max-height: 0;
+    overflow: hidden;
     opacity: 0;
     margin-top: 0;
-    transition: max-height 0.8s ease-in-out, opacity 0.8s ease-in-out, margin-top 0.8s ease-in-out;
+    transition:
+        max-height 0.5s ease-out,
+        opacity 0.3s ease 0.1s,
+        margin-top 0.3s ease;
+    width: 100%; /* Важно! */
+    box-sizing: border-box; /* Учитываем padding в высоте */
 }
 
-/* Стиль для заголовков внутри контента */
+.rights-content.show {
+    max-height: 8000px; /* Больше, чем максимальная возможная высота */
+    opacity: 1;
+    margin-top: 20px;
+}
+
+/* Заголовки внутри */
 .rights-content h3 {
     font-size: 26px;
     font-weight: bold;
     margin-bottom: 10px;
-    text-align: center; /* Центрируем заголовки */
+    text-align: center;
 }
 
 /* Стиль для списков внутри контента */
@@ -381,21 +465,19 @@ footer {
     text-align: left; /* Выравнивание текста в списке по левому краю */
 }
 
-.rights-content ul li {
+/* Списки */
+.rights-content ul,
+.rights-content ol {
+    font-size: 22px;
+    padding-left: 20px;
+    text-align: left;
+}
+
+.rights-content ul li,
+.rights-content ol li {
     margin-bottom: 8px;
 }
 
-/* Опциональные стили для анимации */
-.rights-content {
-    transition: all 0.3s ease;
-}
-
-/* Стиль для анимации открытия */
-.rights-content.show {
-    max-height: 500px; /* Можно увеличить, если текст длинный */
-    opacity: 1;
-    margin-top: 20px; /* Добавляем отступ плавно */
-}
 
 /* Индикаторы */
 .carousel-indicators {
@@ -433,8 +515,9 @@ footer {
 }
 
 .contact-info {
-    font-size: 1.2rem;
+    font-size: 1.5rem;
     margin-top: 20px;
+    text-align: center;
 }
 
 /* Стили для ссылок */
@@ -449,6 +532,7 @@ footer {
 }
 
 .social-links {
+    font-size: 1.5rem;
     display: flex;            /* Используем Flexbox для горизонтального расположения */
     justify-content: center;  /* Центрируем иконки по горизонтали */
     align-items: center;      /* Центрируем иконки по вертикали */
@@ -467,7 +551,7 @@ footer {
 
 .social-links a:hover {
     transform: scale(1.1);    /* Увеличиваем размер иконки при наведении */
-    background-color: #D8C3A5; /* Меняем фон при наведении */
+    background-color: white; /* Меняем фон при наведении */
     box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.2); /* Добавляем тень */
     border-radius: 10px;       /* Увеличиваем радиус углов при наведении */
 }
@@ -487,6 +571,21 @@ footer {
     justify-content: flex-start; /* Элементы будут располагаться сверху */
     text-align: center;
     padding: 50px 20px;
+}
+
+.work-section {
+    margin: 40px auto;
+    max-width: 90%;
+    border-radius: 15px;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+    background: white;
+    display: block;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    text-align: center; /* Если нужно центрировать заголовки */
+    padding: 50px 20px;
+    width: 100%; /* Добавь, если нужно растянуть на всю ширину */
 }
 
 .test-container {
