Последняя версия актуальная от 29.05.2025 Настроена работа в режиме debug = False

--- a/sitewife/test_app1/templates/test_app1/home.html
+++ b/sitewife/test_app1/templates/test_app1/home.html
@@ -157,12 +157,12 @@
             <h3>ЦЕЛИ, ПЛАНЫ И КРИТЕРИИ УСПЕШНОСТИ ТЕРАПИИ </h3>
             <ol>
                 <li>Цели и планы терапии обсуждаются и устанавливаются вместе с клиентом в момент решения о прохождении клиентом психотерапии и подразумевают совместную работу ради разрешения трудностей клиента. Цели могут быть уточнены или доработаны в процессе терапии. Цели не могут быть заменены на совершенно другие без обсуждения, в одностороннем порядке (клиентом или психологом). </li>
-                <li>Критерии успешности терапии дополнительно обсуждаются на первых консультациях. Чтобы психотерапия была успешной:</>
+                <li>Критерии успешности терапии дополнительно обсуждаются на первых консультациях. Чтобы психотерапия была успешной:</li>
             </ol>
                 <ul>
                     <li>Вы будете работать над тем, что мы обсуждаем, во время консультации и самостоятельно. </li>
-                    <li>-Терапию оплачивает непосредственный клиент психотерапии. Это правило не распространяется на детей и подростков. Деньги – эквивалент Ваших усилий по преодолению собственных трудностей. Они организуют Вас и мотивируют на полноценную работу. </li>
-                    <li>- Соблюдение частоты, регулярности и времени встреч. Процесс терапии можно сравнить с медикаментозным лечением. Если вы пропускаете таблетку, лечебный эффект снижается. Если Вы пропускаете сессии у психолога, это отбрасывает нас назад в решении Ваших затруднений.</li>
+                    <li>Терапию оплачивает непосредственный клиент психотерапии. Это правило не распространяется на детей и подростков. Деньги – эквивалент Ваших усилий по преодолению собственных трудностей. Они организуют Вас и мотивируют на полноценную работу. </li>
+                    <li>Соблюдение частоты, регулярности и времени встреч. Процесс терапии можно сравнить с медикаментозным лечением. Если вы пропускаете таблетку, лечебный эффект снижается. Если Вы пропускаете сессии у психолога, это отбрасывает нас назад в решении Ваших затруднений.</li>
                 </ul>
 
             <h3>СЕТТИНГ</h3>
