--- a/sitewife/test_app1/static/test_app1/CSS/styles.css
+++ b/sitewife/test_app1/static/test_app1/CSS/styles.css
@@ -5,6 +5,12 @@
     box-sizing: border-box;
 }
 
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
 .fancy-text {
     font-family: 'Poiret One', sans-serif;
     font-size: 2rem; /* Размер шрифта */
@@ -114,7 +120,7 @@ main {
 
 /* Стили для заголовков */
 h2 {
-    color: ##2a3d42;
+    color: #2a3d42;
     margin-bottom: 10px;
 }
 
@@ -542,7 +548,6 @@ h2 {
 .social-links a {
     margin: 0 5px;           /* Отступы между иконками */
     padding: 12px;            /* Отступы вокруг иконки для создания фона */
-    background-color: #white; /* Светлый фон вокруг иконки */
     border-radius: 5px;       /* Сглаживаем углы фона */
     transition: transform 0.3s ease, background-color 0.3s ease, box-shadow 0.3s ease; /* Плавные анимации */
     display: inline-block;    /* Позволяет использовать отступы и тень */
@@ -712,7 +717,7 @@ h2 {
 
 @media (max-width: 768px) {
     .carousel-item img {
-        width: 60%;  /* Уменьшаем изображение на мобильных устройствах */
+        width: 80%;  /* Уменьшаем изображение на мобильных устройствах */
     }
     .social-links {
         margin-top: 10px;     /* Меньший отступ сверху на мобильных устройствах */
@@ -727,7 +732,8 @@ h2 {
         height: 35px;
     }
 
-    .about-me {
+    .about-me,
+    .about-me.reverse{
         flex-direction: column;
         text-align: center;
         max-width: 90%; /* Ограничиваем ширину */
@@ -748,4 +754,20 @@ h2 {
         font-size: 1.2rem; /* Делаем текст чуть меньше */
         line-height: 1.5; /* Уменьшаем расстояние между строками */
     }
+
+    .mainup, .about-me-section {
+    flex-direction: column !important;
+    flex-direction: column;
+    align-items: center;
+    }
+
+  .profile-photo {
+    width: 90%;
+    height: auto;
+  }
+
+  .test-container {
+    flex-direction: column;
+    min-width: unset;
+  }
 }
