добавил файл requirements.txt

--- a/sitewife/test_app1/templates/test_app1/home.html
+++ b/sitewife/test_app1/templates/test_app1/home.html
@@ -52,34 +52,37 @@
         <button class="carousel-control prev">&#10094;</button>
         <div class="carousel-track">
             <div class="carousel-item">
-                <img src="{% static 'test_app1/images/diplom.jpg' %}" alt="Фото">
+                <img src="{% static 'test_app1/images/diplom.jpg' %}" alt="Диплом">
             </div>
             <div class="carousel-item">
-                <img src="{% static 'test_app1/images/serf1.jpg' %}" alt="Фото 1">
+                <img src="{% static 'test_app1/images/serf1.jpg' %}" alt="Сертификат 1">
             </div>
             <div class="carousel-item">
-                <img src="{% static 'test_app1/images/serf2.jpg' %}" alt="Фото 2">
+                <img src="{% static 'test_app1/images/serf2.jpg' %}" alt="Сертификат 2">
             </div>
             <div class="carousel-item">
-                <img src="{% static 'test_app1/images/serf3.jpg' %}" alt="Фото 3">
+                <img src="{% static 'test_app1/images/serf3.jpg' %}" alt="Сертификат 3">
             </div>
             <div class="carousel-item">
-                <img src="{% static 'test_app1/images/serf4.jpg' %}" alt="Фото 4">
+                <img src="{% static 'test_app1/images/serf4.jpg' %}" alt="Сертификат 4">
             </div>
             <div class="carousel-item">
-                <img src="{% static 'test_app1/images/serf5.jpg' %}" alt="Фото 5">
+                <img src="{% static 'test_app1/images/serf5.jpg' %}" alt="Сертификат 5">
             </div>
             <div class="carousel-item">
-                <img src="{% static 'test_app1/images/serf7.jpg' %}" alt="Фото 6">
+                <img src="{% static 'test_app1/images/serf6.jpg' %}" alt="Сертификат 6">
             </div>
             <div class="carousel-item">
-                <img src="{% static 'test_app1/images/serf8.jpg' %}" alt="Фото 7">
+                <img src="{% static 'test_app1/images/serf7.jpg' %}" alt="Сертификат 7">
             </div>
             <div class="carousel-item">
-                <img src="{% static 'test_app1/images/serf9.jpg' %}" alt="Фото 8">
+                <img src="{% static 'test_app1/images/serf8.jpg' %}" alt="Сертификат 8">
             </div>
             <div class="carousel-item">
-                <img src="{% static 'test_app1/images/serf10.jpg' %}" alt="Фото 9">
+                <img src="{% static 'test_app1/images/serf9.jpg' %}" alt="Сертификат 9">
+            </div>
+            <div class="carousel-item">
+                <img src="{% static 'test_app1/images/serf10.jpg' %}" alt="Сертификат 10">
             </div>
         </div>
         <button class="carousel-control next">&#10095;</button>
