--- a/sitewife/test_app1/templates/test_app1/home.html
+++ b/sitewife/test_app1/templates/test_app1/home.html
@@ -274,12 +274,6 @@
 
 <div class="contact-info">
     <h2>Мои контакты</h2>
-
-        <!-- Секция карты
-        <div class="map-container">
-            <div id="map" class="map"></div>
-        </div>
-        -->
         <div class="contact-info">
             <p>Телефон: +375 29 6236583</p>
             <p>Email: <a href="mailto:psichologist.p.karina45@gmail.com">psichologist.p.karina45@gmail.com</a></p>
@@ -287,7 +281,7 @@
 </div>
 
  <div class="social-links">
-     <h2>Так же со смной можно связаться через социальыне сети</h2>
+     <h2>Так же со смной можно связаться через социальные сети</h2>
      <a href="https://t.me/+375296236583" target="_blank">
          <img src="{% static 'test_app1/images/telegram-ico.png' %}" alt="Telegram">
      </a>
