последние правки в оформление для мобильных устройств. Сделал перенос контактов.

--- a/sitewife/test_app1/templates/test_app1/home.html
+++ b/sitewife/test_app1/templates/test_app1/home.html
@@ -284,15 +284,17 @@
 
  <div class="social-links">
      <h2>Так же со смной можно связаться через социальные сети</h2>
-     <a href="https://t.me/+375296236583" target="_blank">
-         <img src="{% static 'test_app1/images/telegram-ico.png' %}" alt="Telegram">
-     </a>
-     <a href="viber://chat?number=%2B375296236583" target="_blank">
-         <img src="{% static 'test_app1/images/viber-ico.png' %}" alt="Viber">
-     </a>
-     <a href="https://www.instagram.com/family_psychologist_karina/" target="_blank">
-         <img src="{% static 'test_app1/images/instagram-ico.png' %}" alt="Instagram">
-     </a>
+     <div class="social-icons">
+         <a href="https://t.me/+375296236583" target="_blank">
+             <img src="{% static 'test_app1/images/telegram-ico.png' %}" alt="Telegram">
+         </a>
+         <a href="viber://chat?number=%2B375296236583" target="_blank">
+             <img src="{% static 'test_app1/images/viber-ico.png' %}" alt="Viber">
+         </a>
+         <a href="https://www.instagram.com/family_psychologist_karina/" target="_blank">
+             <img src="{% static 'test_app1/images/instagram-ico.png' %}" alt="Instagram">
+         </a>
+     </div>
  </div>
 
 <script src="{% static 'js/animations.js' %}"></script>
